# numerical-optimization-methods

./: .clang-format  README.md  constants.hpp
differentiation/: CMakeLists.txt  README.md  diff.cpp
differentiation/include/: aad.h  diff.h  differentiator.h  enum.h  stencil.h  tests.h
differentiation/src/: aad.cpp  diff.cpp  stencil.cpp  test_diff.cpp  tests.cpp
exponent/: CMakeLists.txt  constants.hpp  exp.hpp  find_coef.py  poly.hpp  test-exp.cpp  test.hpp
hw-1/: CMakeLists.txt  README.md  constants.hpp  exp.hpp  main.cpp  test-exp.cpp  testExp.cpp
options/: CMakeLists.txt
options-2/: CMakeLists.txt
options-2/include/: analytical.h  blas.h  container.h  model_params.h  rng.h  slae.h  stepper.h  system_params.h  utils.h
options-2/src/: system_params.cpp  test.cpp  utils.cpp
options-2/test/: constants.h  test_container.h  test_slae.h  test_stepper.h  test_utils.h
options-2/test_results/: n_vs_norm.csv  visualize_results.py
options/include/: analytical.h  constants.h  implicit.h  stepper.h  time_marshalling.h
options/src/: test.cpp  test_implicit.cpp
satellite-model/: CMakeLists.txt
satellite-model/includes/: function.h  integrator.h  observer.h  stepper.h
satellite-model/satellite/: plot_trajectory.py
satellite-model/src/: observer.cpp  test.cpp
standard-atmosphere-model/: CMakeLists.txt
standard-atmosphere-model/include/: constants.h  integrator.h  observer.h  sam.h  timestepper.h  timesteppers.h
standard-atmosphere-model/projectiles/: plot_projectile.py
standard-atmosphere-model/src/: observer.cpp  sam.cpp  tests.cpp
(+9 files in other folders)
